--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="src/css/index.css">
 </head>
 
-<body style='background-image: url("/src/assets/background.jpg")'>
+<body style='background-image: url("src/assets/background.jpg")'>
     <div class="app">
         <!-- ---------- NAVBAR ---------- -->
         <nav class="navbar">
